Fix committee title overflow

--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -121,7 +121,7 @@ h5 {
   }
 }
 
-@media (max-width: 1200px) and (min-width: 992px) {
+@media (max-width: 1200px) {
   .committee-title {
     font-size: 2.5em;
   }
